commit test add paragraph

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>we back</title>
 </head>
 <body>
-    
+    <h1>this is live now</h1>
+    <p>this is a paragraph where im gonna try to practice what i learnt</p>
+    <p>this is the actual paragraph. i learn that <strong>strong</strong> is for bold and <em>em</em> is for italic which is kinda cool.</p>
 </body>
 </html>
